fix spacing for media from title

--- a/src/components/projects/project-profile.module.css
+++ b/src/components/projects/project-profile.module.css
@@ -2,6 +2,10 @@
   margin-top: 2em !important;
 }
 
+.media {
+  margin-top: 1em;
+}
+
 .divider {
   height: 2em;
 }
